# fgo-game-data-api

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  config.sample.json  docker-compose.sample.yml  docker-compose.yml  gunicorn_conf.py  mypy.ini  pyproject.toml  requirements.txt  test.py
.github/workflows/: api-types-publish.yml  format.yml  update-translations.yml
app/: config.py  logging.py  main.py  models.py  tasks.py  test_main.py  utils.py  zstd.py
app/core/: basic.py  info.py  nice.py  raw.py  rayshift.py  reverse.py  search.py  utils.py
app/data/: basic.py  bgm.py  buff.py  common.py  custom_mappings.py  enums.py  event.py  extra.py  gamedata.py  gameenums.py  gift.py  item.py  models.py  nice.py  raw.py  reverse.py  script.py  search.py  shop.py  tasks.py  translations.py  utils.py
app/db/: base.py  engine.py  load.py
app/export/: constants.py
app/models/: base.py  raw.py  rayshift.py
app/rayshift/: quest.py
app/redis/: __init__.py  load.py
app/routers/: basic.py  deps.py  nice.py  raw.py  secret.py  utils.py
app/schemas/: base.py  basic.py  common.py  enums.py  gameenums.py  nice.py  raw.py  rayshift.py  search.py
app/test_data/: JP_Chiyome.json  NA_NP_202401_expand.json  NA_NP_9940531_reverse.json  NA_Oni_Mask_expanded.json  NA_Servant_not_found.json  NA_Tomoe.json  NA_buff_200.json  NA_function_203_reverse.json  NA_function_300_reverse_expand.json  NA_function_433_expand.json  NA_skill_275551_expand.json
export/: .gitignore  AiConditionInformation.json  BuffList.ActionList.json  NiceCard.json  NiceConstant.json  niceexport.py
export/CN/: NiceAiConditionInformation.json  NiceBuffList.ActionList.json  NiceCard.json  NiceClass.json  NiceClassAttackRate.json  NiceClassRelation.json  NiceConstant.json  NiceConstantStr.json  NiceUserLevel.json
export/JP/: NiceBuffList.ActionList.json  NiceCard.json  NiceClass.json  NiceClassAttackRate.json  NiceClassRelation.json  NiceConstant.json  NiceConstantStr.json  NiceSvtGrailCost.json  NiceUserLevel.json
export/KR/: NiceAttributeRelation.json  NiceBuffList.ActionList.json  NiceCard.json  NiceClass.json  NiceClassAttackRate.json  NiceClassRelation.json  NiceConstant.json  NiceConstantStr.json  NiceSvtGrailCost.json  NiceUserLevel.json
export/NA/: NiceAiConditionInformation.json  NiceBuffList.ActionList.json  NiceCard.json  NiceClass.json  NiceClassAttackRate.json  NiceClassRelation.json  NiceConstant.json  NiceConstantStr.json  NiceSvtGrailCost.json  NiceUserLevel.json
export/TW/: NiceBuffList.ActionList.json  NiceCard.json  NiceClass.json  NiceClassAttackRate.json  NiceClassRelation.json  NiceConstant.json  NiceConstantStr.json  NiceUserLevel.json
fgo_api_types/: README.md  pyproject.toml
scripts/: dump_rayshiftQuest.ps1  enum.ts  extract_enums.py  fill_missing_enemy_hash.py  format.ps1  format_json.py  get_test_data.ps1  lint.ps1  load_rayshift_quest_list.py  test.ps1  test_load_rs.py  update_ce_translation.py
secrets/: README.md
tests/: conftest.py  get_test_data.py  test_basic.py  test_data_import.py  test_main.py  test_misc.py  test_nice.py  test_quest_select.py  test_raw.py  test_rayshift.py  test_search.py  test_settings.py  utils.py
tests/test_data/: JP_Chiyome.json  NA_Fujino_expanded.json  NA_Gentle_affection.json  NA_NP_301202_reverse_expand.json  NA_NP_900101.json  NA_NP_9940531_reverse.json  NA_Oni_Mask_expanded.json  NA_Tomoe.json  NA_buff_190_reverse.json  NA_function_203_reverse.json  NA_function_300_reverse_expand.json  NA_function_400.json  NA_function_433.json  NA_skill_275551_reverse_expand.json  NA_skill_446550_reverse.json
tests/test_data_basic/: JP_Bitter_Chocolates.json  JP_CC_8400550.json  JP_Fionn_NP.json  JP_Fujino_NP_reverse.json  JP_Gareth.json  JP_Girl_Ghost.json  JP_Liz_td_material.json  JP_Sieg_en.json  JP_Soul_Eater.json  JP_war_Shinjuku.json  NA_Fionn_1st_skill_reverse.json  NA_Fujino_2nd_skill.json  NA_Jekyll_Interlude.json  NA_MC_LB.json  NA_Mordred.json  NA_Shimousa_quest.json  NA_buff_267_reverse.json  NA_buff_300.json  NA_event_Oniland.json  NA_function_298_reverse.json  NA_function_433.json
tests/test_data_master/: mstEventMissionCondition.json
tests/test_data_misc/: test_script.txt
tests/test_data_nice/: CN_NP_without_svtTd.json  JP_AI_Act_NP.json  JP_Aerial_Drive.json  JP_BGM_Shinjuku.json  JP_Bartholomew.json  JP_Bartholomew_NP.json  JP_CC_8400550.json  JP_Elice.json  JP_Elice_EN.json  JP_Fionn_NP.json  JP_Fujino_NP_reverse.json  JP_Guda_5.json  JP_Himiko_AI_NPC.json  JP_Jason.json  JP_Jason_skill_1.json  JP_KH_CQ_taunt.json  JP_LB6_support_deck.json  JP_Liz_td_material.json  JP_MC_Tropical_Summer.json  JP_Mash.json  JP_Melt_skill_dependFunc.json  JP_Ody.json  JP_Space_Ishtar.json  JP_Summer_Adventure.json  JP_Suzuka_rank_up.json  JP_Teslafest_quest.json  JP_Tiamat.json  JP_WarEpilogue108.json  JP_Yang_Guifei_skill.json  JP_buff_convert.json  JP_buff_special_invincible_reverse.json  JP_event_Digging.json  JP_event_campaign.json  JP_event_fortification.json  JP_event_random_mission.json  JP_proto_merlin_summer.json  JP_remapped_quest.json  JP_shop_blue_apple.json  JP_skill_2189551.json  JP_support_servant.json  (+36 more)
tests/test_data_raw/: JP_BGM_Shinjuku.json  JP_Chiyome.json  JP_KH_CQ_taunt.json  JP_MC_Plugsuit.json  JP_Meaka_Fudou.json  JP_function_4085.json  JP_item_Lancer_Monument.json  JP_skill_980004_reverse.json  JP_svtScripts.json  JP_war_Shimousa.json  NA_AI_Beni_CQ_monkey.json  NA_Artoria_rank_up_2.json  NA_BGM_battle_10.json  NA_Bedivere_lore.json  NA_CC_Fou.json  NA_Fujino_expanded.json  NA_Gentle_affection.json  NA_KNK_rerun.json  NA_LB3_script.json  NA_Moriarty_lore.json  NA_NP_202401_expand.json  NA_NP_301202_reverse_expand.json  NA_NP_900101.json  NA_NP_9940531_reverse.json  NA_Oni_Mask_expanded.json  NA_Tomoe.json  NA_buff_190_reverse.json  NA_buff_200.json  NA_function_203_reverse.json  NA_function_205_expand.json  NA_function_300_reverse_expand.json  NA_function_400.json  NA_function_4086.json  NA_function_433.json  NA_function_433_expand.json  NA_skill_24550.json  NA_skill_275551_expand.json  NA_skill_275551_reverse_expand.json  (+3 more)
(+142 files in other folders)
