[tool.poetry]
name = "fgo-game-data-api"
version = "6.0.0"
description = "Provide raw and processed FGO game data"
authors = ["squaresmile <squaresmile@protonmail.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
uvicorn = {extras = ["standard"], version = "^0.31.1"}
python-dotenv = "^1.0.1"
fuzzywuzzy = { extras = ["speedup"], version = "^0.18.0" }
orjson = "^3.10.7"
aiofiles = "^24.1.0"
GitPython = "^3.1.43"
SQLAlchemy = "^2.0.35"
httpx = {extras = ["http2"], version = "^0.27.2"}
fastapi-cache2 = "^0.2.2"
gunicorn = {extras = ["setproctitle"], version = "^23.0.0"}
redis = "^5.1.1"
hiredis = "^3.0.0"
psycopg = "^3.2.3"
pydantic = "^2.9.2"
zstandard = "^0.23.0"
uvicorn-worker = "^0.2.0"
pydantic-settings = "^2.4.0"
psutil = "^6.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.2"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.24.0"
coverage = "^7.6.2"
asgi-lifespan = "^2.1.0"
fuzzywuzzy-stubs = "^0.0.1"
types-aiofiles = "^24.1.0.20240626"
types-redis = "^4.6.0.20241004"
types-orjson = "^3.6.2"
ruff = "^0.6.9"
types-pyopenssl = "^24.1.0.20240722"
types-psutil = "^6.0.0.20240621"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.isort]
line_length = 88
profile = "black"
known_third_party = "orjson"
lines_after_imports = 2
extra_standard_library = ["tomllib"]

[tool.black]
target-version = ['py310']

[tool.mypy]
plugins = "pydantic.mypy, sqlalchemy.ext.mypy.plugin"

follow_imports = "normal"
show_column_numbers = true

# mypy strict options
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["fastapi_cache.*"]
no_implicit_reexport = false
ignore_missing_imports = true

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "BLE",
    "ARG",
    "B",
    "C4",
    "PT",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "RUF",
]
ignore = [
    "E501",
    "B008",
    "PT023",
    "PT006",
    "PLC1901",
    "PLR2004",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR5501",
    "RUF001",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"app/schemas/basic.py" = ["RUF012"]
"app/schemas/raw.py" = ["RUF012"]
"app/schemas/nice.py" = ["RUF012"]
"app/schemas/search.py" = ["RUF009"]
"app/redis/helpers/quest.py" = ["RUF012"]
"app/config.py" = ["RUF012"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
