[tool.poetry]
name = "fgo-api-types"
version = "0.1.0"
description = "Provide raw and processed FGO game data"
authors = ["squaresmile <squaresmile@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"
orjson = "^3.6.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
