[tool.poetry]
name = "fgo-api-types"
version = "0.1.0"
description = "Provide Pydantic types from FGO API"
authors = ["squaresmile <squaresmile@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1"
orjson = "^3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
